--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,18 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
-    background: url('https://www.myfreewalls.com/public/uploads/preview/star-wars-art-4k-wallpaper-background-11624139063guvhmqtpit.jpg') center / cover  no-repeat;
+
     width: 100%;
     height: 100vh;
+    overflow-x: hidden;
 }
-.container{
-    background: url('https://i.pinimg.com/originals/c1/ff/f2/c1fff28a143cc9192e8d5d0f646f5126.jpg') center / cover  no-repeat;
-    width: 100%;
-    height: 100vh;
+.row{
+    display: flex;
+    flex-wrap: wrap;
 }
 .wrapper{
-    margin-left: 25%;
+    flex-wrap: wrap;
+    /* margin-left: 25%; */
     width: 900px;
     height: 450px;
     display: flex;
@@ -50,19 +51,104 @@ body{
     border: 1px  solid rgb(0, 0, 0);
     padding: 20px 100px;
     border-radius: 30px;
-    margin-top: 10px;
-    transition: .3s;
-    
+    margin-top: 10px;    
 }
 .single button{
     background-color: rgba(0, 0, 0, 0.9);
     border: 1px  solid rgb(0, 8, 255);
     color: aqua;
     padding: 20px 90px;
-    border-radius: 50px;
+    border-radius: 10px;
     position: absolute;
     cursor: pointer;
     bottom: 1rem;
     right: 1rem;
 
+}
+
+@media (max-width:320px) {
+    .single ul li{
+        padding: 10px 30px;
+        border-radius: 30px;
+        margin-top: 10px;
+        
+    }
+    .single button{
+        background-color: rgba(0, 0, 0, 0.9);
+        border: 1px  solid rgb(0, 8, 255);
+        color: aqua;
+        padding: 10px 30px;
+        border-radius: 50px;
+        position: absolute;
+        cursor: pointer;
+        bottom: 1rem;
+        right: 1rem;
+    
+    }
+}
+@media (max-width:375px) {
+    .single ul li{
+        background-color: rgba(0, 238, 0, 0.9);
+        border: 1px  solid rgb(0, 0, 0);
+        padding: 15px 50px;
+        border-radius: 30px;
+        margin-top: 10px;
+        
+    }
+    .single button{
+        background-color: rgba(0, 0, 0, 0.9);
+        border: 1px  solid rgb(0, 8, 255);
+        color: aqua;
+        padding: 12px 40px;
+        border-radius: 50px;
+        position: absolute;
+        cursor: pointer;
+        bottom: 1rem;
+        right: 1rem;
+    
+    }
+}
+@media (max-width:425px) {
+    .single ul li{
+        background-color: rgba(0, 238, 0, 0.9);
+        border: 1px  solid rgb(0, 0, 0);
+        padding: 18px 55px;
+        border-radius: 30px;
+        margin-top: 10px;
+        
+    }
+    .single button{
+        background-color: rgba(0, 0, 0, 0.9);
+        border: 1px  solid rgb(0, 8, 255);
+        color: aqua;
+        padding: 12px 50px;
+        border-radius: 50px;
+        position: absolute;
+        cursor: pointer;
+        bottom: 1rem;
+        right: 1rem;
+    
+    }
+}
+@media (max-width:768px) {
+    .single ul li{
+        background-color: rgba(0, 238, 0, 0.9);
+        border: 1px  solid rgb(0, 0, 0);
+        padding: 18px 55px;
+        border-radius: 30px;
+        margin-top: 10px;
+        
+    }
+    .single button{
+        background-color: rgba(0, 0, 0, 0.9);
+        border: 1px  solid rgb(0, 8, 255);
+        color: aqua;
+        padding: 12px 50px;
+        border-radius: 50px;
+        position: absolute;
+        cursor: pointer;
+        bottom: 1rem;
+        right: 1rem;
+    
+    }
 }
